vlib/v/checker/tests/import_mod_as_duplicate_err.out
vlib/v/checker/tests/import_mod_as_duplicate_err.vv:3:19: error: duplicate of module name `x.json2` on line 1
    1 | module json
    2 | 
    3 | import x.json2 as json
      |                   ~~~~
    4 | 
    5 | any := json.Any(json.null)
vlib/v/checker/tests/import_mod_as_duplicate_err.vv:1:1: error: project must include a `main` module or be a shared library (compile with `v -shared`)
    1 | module json
      | ^
    2 | 
    3 | import x.json2 as json
